start in body and end from header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+    <!-- start header -->
     <header>
         <div class="container">
             <a href="#" class="logo">
@@ -35,6 +35,12 @@
         </div>
 
     </header>
+    <!-- end header -->
+
+    <!-- start body -->
+    <!-- start body -->
+    <!-- start body -->
+    <!-- start body -->
 </body>
 
 </html>
