small and medium and large

--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
             <nav>
                 <ul>
                     <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">about</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">portfolio</a></li>
                     <li><a href="#">contect</a></li>
                     <li><a href="#">pricng</a></li>
+                    <li><a href="#"></a>services</a></li>
                 </ul>
+                <div class="frome">
+                    <i class="fas fa-search"></i>
+
+
+                </div>
             </nav>
         </div>
 
     </header>
     <!-- end header -->
 
-    <!-- start body -->
-    <!-- start body -->
-    <!-- start body -->
-    <!-- start body -->
+
 </body>
 
 </html>
