--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
                 <img src="https://via.placeholder.com/100" alt="" class="images">
             </a>
             <nav>
+                <i class="fas fa-bars toggle-menu"></i>
                 <ul>
                     <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#">services</a></li>
                     <li><a href="#">portfolio</a></li>
-                    <li><a href="#">contect</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">pricng</a></li>
-                    <li><a href="#"></a>services</a></li>
+                    <li><a href="#">Contect</a></li>
                 </ul>
-                <div class="frome">
+                <div class="form">
                     <i class="fas fa-search"></i>
 
 
