stop in pc cresh

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
     </header>
     <!-- end header -->
+    <!-- start landing -->
+    <div class="landing">
+
+    </div>
+    <!-- End landing -->
+
 
 
 </body>
