add git ignore and all of old work

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="https://via.placeholder.com/100" alt="" class="images">
+                <img src="css/images/logo.jpg" alt="logo" class="images">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu"></i>
@@ -45,11 +45,183 @@
     <!-- end header -->
     <!-- start landing -->
     <div class="landing">
+        <div class="overlay"></div>
+        <div class="text">
+            <div class="content">
+                <h2>
+                    Hello world <br /> we Are kasper we make Art. </h2>
+                <p>curabitur arcu arcu, aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa </p>
+            </div>
+        </div>
+        <i class="fas fa-angle-left change-background fa-2x"></i>
+        <i class="fas fa-angle-right change-background fa-2x"></i>
+        <ul class="bullets">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+        </ul>
 
     </div>
     <!-- End landing -->
-
-
+    <!-- <div class="section">
+            <div class="main-heading">
+                <h2> services </h2>
+                <p> curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt
+                </p>
+            </div>
+        </div> -->
+    <!-- start services -->
+    <div class="services">
+        <div class="container">
+            <div class="main-heading">
+                <h2>services</h2>
+                <p>
+                    curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+            </div>
+            <div class="services-container">
+                <div class="srv-box">
+                    <i class="fas fa-desktop fa-3x"></i>
+                    <div class="text">
+                        <h3>vorem amet intuitive</h3>
+                        <p>curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit,
+                            eget
+                            tincidunt nibh pulvinar a. curabitur aliquet quam.
+                        </p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-cog fa-3x"></i>
+                    <div class="text">
+                        <h3>vorem amet intuitive</h3>
+                        <p>curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit,
+                            eget
+                            tincidunt nibh pulvinar a. curabitur aliquet quam.
+                        </p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-pencil-ruler fa-3x"></i>
+                    <div class="text">
+                        <h3>vorem amet intuitive</h3>
+                        <p>curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit,
+                            eget
+                            tincidunt nibh pulvinar a. curabitur aliquet quam.
+                        </p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-camera fa-3x"></i>
+                    <div class="text">
+                        <h3>vorem amet intuitive</h3>
+                        <p>curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit,
+                            eget
+                            tincidunt nibh pulvinar a. curabitur aliquet quam.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End services -->
+    <!-- start Design -->
+    <div class="design">
+        <div class="image">
+            <img src="https://via.placeholder.com/100" alt="image">
+        </div>
+        <div class="text">
+            <h2>our Design comes with...</h2>
+            <ul>
+                <li>Responsive Design</li>
+                <li>modern And clean Design</li>
+                <li>clean code</li>
+                <li>Browser Friendly</li>
+            </ul>
+        </div>
+    </div>
+    <!-- End Design -->
+    <!-- start portfolio -->
+    <div class="portfolio">
+        <div class="container">
+            <div class="main-heading">
+                <h2>portfolio</h2>
+                <p>
+                    curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+            </div>
+            <ul class="shuffle">
+                <li class="active">All</li>
+                <li>App</li>
+                <li>photo</li>
+                <li>web</li>
+                <li>print</li>
+            </ul>
+        </div>
+        <div class="imgs-container">
+            <div class="box">
+                <img src="css/images/shuffle-01.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-02.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-03.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-04.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="hcss/images/shuffle-05.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-06.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-07.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="css/images/shuffle-08.jpg" alt="">
+                <div class="caption">
+                    <h4>Awesome image</h4>
+                    <p>photography</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End portfolio -->
 
 </body>
 
