stop in 14th vedio and start ahmed work

--- a/index.html
+++ b/index.html
@@ -220,8 +220,84 @@
                 </div>
             </div>
         </div>
+        <a href="#" class="more">more</a>
     </div>
     <!-- End portfolio -->
+    <!--start video -->
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="css/video/awesome.mp4" type="video/mp4">
+        </video>
+        <div class="text">
+            <h2>super Awesome video here</h2>
+            <p>its All you need</p>
+            <button>see more</button>
+        </div>
+    </div>
+    <!-- End video -->
+    <!-- start About -->
+    <div class="about">
+        <div class="container">
+            <div class="main-heading">
+                <h2>About us</h2>
+                <p>
+                    curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+            </div>
+            <img src="css/images/about.jpg" alt="">
+        </div>
+    </div>
+    <!-- End Abut -->
+    <!-- start stats-->
+    <div class="stats">
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-mug-hot"></i>
+                <div class="number">1.354</div>
+                <p>coffee Drinks</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-folder"></i>
+                <div class="number">355</div>
+                <p>completed projects</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-envelope"></i>
+                <div class="number">1.465</div>
+                <p>Mail sent</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-trophy"></i>
+                <div class="number">18</div>
+                <p>Awards Received</p>
+            </div>
+        </div>
+    </div>
+    <!-- End stats -->
+    <!-- start Skills -->
+    <div class="our-skills">
+        <div class="container">
+            <div class="testimonials">
+                <h3>Testimonials</h3>
+                <p>
+                    curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+            </div>
+            <div class="skills">
+                <h3>Skills</h3>
+                <p>
+                    curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
+
+
+
 
 </body>
 
