--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="css/images/logo.jpg" alt="logo" class="images">
+                <img src="images/logo.jpg" alt="logo" class="images">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu"></i>
@@ -164,56 +164,56 @@
         </div>
         <div class="imgs-container">
             <div class="box">
-                <img src="css/images/shuffle-01.jpg" alt="">
+                <img src="images/shuffle-01.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-02.jpg" alt="">
+                <img src="images/shuffle-02.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-03.jpg" alt="">
+                <img src="images/shuffle-03.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-04.jpg" alt="">
+                <img src="images/shuffle-04.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="hcss/images/shuffle-05.jpg" alt="">
+                <img src="images/shuffle-05.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-06.jpg" alt="">
+                <img src="images/shuffle-06.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-07.jpg" alt="">
+                <img src="images/shuffle-07.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="css/images/shuffle-08.jpg" alt="">
+                <img src="images/shuffle-08.jpg" alt="">
                 <div class="caption">
                     <h4>Awesome image</h4>
                     <p>photography</p>
@@ -226,7 +226,7 @@
     <!--start video -->
     <div class="video">
         <video autoplay muted loop>
-            <source src="css/video/awesome.mp4" type="video/mp4">
+            <source src="video/awesome.mp4" type="video/mp4">
         </video>
         <div class="text">
             <h2>super Awesome video here</h2>
@@ -245,7 +245,7 @@
                     tincidunt.
                 </p>
             </div>
-            <img src="css/images/about.jpg" alt="">
+            <img src="images/about.jpg" alt="">
         </div>
     </div>
     <!-- End Abut -->
@@ -284,6 +284,9 @@
                     curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
                     tincidunt.
                 </p>
+                <div class="content">
+                    <img src="images/sk" alt="">
+                </div>
             </div>
             <div class="skills">
                 <h3>Skills</h3>
