complete skiles html and start in css

--- a/index.html
+++ b/index.html
@@ -285,8 +285,24 @@
                     tincidunt.
                 </p>
                 <div class="content">
-                    <img src="images/sk" alt="">
+                    <img src="images/395599f1a16d403e7e499d1ad0d07707.jpg" alt="">
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit minus fugit aliquam
+                        exercitationem alias, corporis sequi dignissimos placeat, provident, reprehenderit sunt?
+                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?</div>
+                    <p>John Doe, CEO</p>
                 </div>
+                <div class="content">
+                    <img src="images/395599f1a16d403e7e499d1ad0d07707.jpg" alt="">
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit minus fugit aliquam
+                        exercitationem alias, corporis sequi dignissimos placeat, provident, reprehenderit sunt?
+                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?</div>
+                    <p>John Doe, CEO</p>
+                </div>
+                <ul class="bullets">
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
             </div>
             <div class="skills">
                 <h3>Skills</h3>
@@ -294,6 +310,30 @@
                     curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit aliquet elit, eget
                     tincidunt.
                 </p>
+                <div class="prog-holder">
+                    <h4>adobe</h4>
+                    <div class="prog">
+                        <span style="width: 90%;" data-progress="90%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>HTML &amp; CSS</h4>
+                    <div class="prog">
+                        <span style="width: 90%;" data-progress="90%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>JavaScript</h4>
+                    <div class="prog">
+                        <span style="width: 90%;" data-progress="90%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>PHP</h4>
+                    <div class="prog">
+                        <span style="width: 90%;" data-progress="90%"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
