end Skills Sections and start in Quote Section

--- a/index.html
+++ b/index.html
@@ -285,18 +285,18 @@
                     tincidunt.
                 </p>
                 <div class="content">
-                    <img src="images/395599f1a16d403e7e499d1ad0d07707.jpg" alt="">
+                    <img src="https://via.placeholder.com/500" alt="">
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit minus fugit aliquam
-                        exercitationem alias, corporis sequi dignissimos placeat, provident, reprehenderit sunt?
-                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?</div>
-                    <p>John Doe, CEO</p>
+                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?
+                        <p>John Doe, CEO</p>
+                    </div>
                 </div>
                 <div class="content">
-                    <img src="images/395599f1a16d403e7e499d1ad0d07707.jpg" alt="">
+                    <img src="https://via.placeholder.com/500" alt="">
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit minus fugit aliquam
-                        exercitationem alias, corporis sequi dignissimos placeat, provident, reprehenderit sunt?
-                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?</div>
-                    <p>John Doe, CEO</p>
+                        Adipisci eos exercitationem dolor illo ratione itaque culpa quasi?
+                        <p>John Doe, CEO</p>
+                    </div>
                 </div>
                 <ul class="bullets">
                     <li></li>
@@ -319,19 +319,19 @@
                 <div class="prog-holder">
                     <h4>HTML &amp; CSS</h4>
                     <div class="prog">
-                        <span style="width: 90%;" data-progress="90%"></span>
+                        <span style="width: 85%;" data-progress="85%"></span>
                     </div>
                 </div>
                 <div class="prog-holder">
                     <h4>JavaScript</h4>
                     <div class="prog">
-                        <span style="width: 90%;" data-progress="90%"></span>
+                        <span style="width: 80%;" data-progress="80%"></span>
                     </div>
                 </div>
                 <div class="prog-holder">
                     <h4>PHP</h4>
                     <div class="prog">
-                        <span style="width: 90%;" data-progress="90%"></span>
+                        <span style="width: 70%;" data-progress="70%"></span>
                     </div>
                 </div>
             </div>
