complete Quote Section and start in Pricing Section

--- a/index.html
+++ b/index.html
@@ -338,7 +338,19 @@
         </div>
     </div>
     <!-- End Skills -->
+    <!-- Start Quote -->
 
+    <div class="quote">
+        <div class="container">
+            <q>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur illo laborum, doloribus explicabo
+                asperiores maxime assumenda repellendus amet magni, nulla animi tempora, voluptatem sint voluptatibus
+                delectus placeat laboriosam soluta! Placeat!</q>
+            <span>John Doe</span>
+        </div>
+    </div>
+
+
+    <!-- End Quote -->
 
 
 
