--- a/index.html
+++ b/index.html
@@ -349,8 +349,89 @@
         </div>
     </div>
 
-
     <!-- End Quote -->
+    <!-- Start Pricing-->
+    <div class="pricing">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Pricing</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate possimus dolor voluptates nemo
+                    ducimus nihil non, quo, eum exercitationem quos, maxime quam impedit nostrum voluptatibus nam. Error
+                    quas distinctio enim?
+                </p>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <div class="head">
+                        <h3>Basic</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1.</li>
+                        <li>Extra Feature </li>
+                        <li>Extra Feature No 2.</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Premium</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1.</li>
+                        <li>Extra Feature </li>
+                        <li>Extra Feature No 2.</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Pro</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1.</li>
+                        <li>Extra Feature </li>
+                        <li>Extra Feature No 2.</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Platinum</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1.</li>
+                        <li>Extra Feature </li>
+                        <li>Extra Feature No 2.</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <p class="contact-text">
+                Contact Us if you have special request
+            </p>
+            <a href="#" class="contact-link">Contact Us </a>
+        </div>
+    </div>
+
+    <!-- End Pricing-->
+
 
 
 
