complete  Subscribe Section and start in Contact Us Section

--- a/index.html
+++ b/index.html
@@ -431,7 +431,22 @@
     </div>
 
     <!-- End Pricing-->
+    <!-- Start Subscribe -->
+    <div class="subscribe">
+        <div class="container">
+            <form action="">
+                <i class="far fa-envelope fa-lg"></i>
+                <input type="email" name="mail" placeholder="Your Email">
+                <input type="submit" value="Subscribe">
+            </form>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa id mollitia fuga aut molestias reiciendis
+                obcaecati explicabo?
+            </p>
+        </div>
+    </div>
 
+    <!-- End Subscribe -->
 
 
 
