--- a/index.html
+++ b/index.html
@@ -445,9 +445,37 @@
             </p>
         </div>
     </div>
-
     <!-- End Subscribe -->
+    <!-- Start Contact Us -->
 
+    <div class="contact">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Contact Us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat velit quisquam facilis ducimus
+                    repellendus, illo accusantium laboriosam sed ullam culpa sit hic alias perspiciatis esse labore
+                    commodi distinctio expedita aliquid!s
+                </p>
+            </div>
+            <div class="content">
+                <form action="">
+                    <input class="main-input" type="text" name="name" placeholder="Your Name">
+                    <input class="main-input" type="email" name="email" placeholder="Your Email">
+                    <textarea name="message" placeholder="Your Message" class="main-input"></textarea>
+                    <input type="submit" value="Send Message">
+                </form>
+                <div class="info">
+                    <h4>Get In Touch</h4>
+                    <span class="phone">+967 777 777 777 777</span>
+                    <span class="phone">+967 777 777 777 777</span>
+                    <h4>Where We Are</h4>
+                    <address>Yemen Sana'a <br> New Yourk, NYC <br> 123-456-789 <br> YE </address>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Contact Us -->
 
 
 </body>
