complete last section "Footer"

--- a/index.html
+++ b/index.html
@@ -477,6 +477,21 @@
     </div>
     <!-- End Contact Us -->
 
+    <!-- Start Footer -->
+    <div class="footer">
+        <div class="container">
+            <img src="images/logo.jpg" alt="">
+            <p>We Are Social</p>
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-home"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <p class="copyright">&copy; 2024 <span>Kesper</span> All Right Reserved</p>
+        </div>
+    </div>
+    <!-- End Footer -->
 
 </body>
 
