create some update and don wirh it

--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
                 </ul>
                 <div class="form">
                     <i class="fas fa-search"></i>
-
-
                 </div>
             </nav>
         </div>
-
     </header>
     <!-- end header -->
     <!-- start landing -->
@@ -50,9 +47,9 @@
             <div class="content">
                 <h2>
                     Hello world <br /> we Are kasper we make Art. </h2>
-                <p>curabitur arcu arcu, aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa </p>
+                <p>curabitur arcu arcu, curabitur arcu erat, accumsan id impordiet et, porttitpr at sem. Mauris blandit
+                    aliquet elit, eget
+                    tincidunt. </p>
             </div>
         </div>
         <i class="fas fa-angle-left change-background fa-2x"></i>
@@ -131,7 +128,7 @@
     <!-- start Design -->
     <div class="design">
         <div class="image">
-            <img src="https://via.placeholder.com/100" alt="image">
+            <img src="../images/aa.jpg" alt="image">
         </div>
         <div class="text">
             <h2>our Design comes with...</h2>
@@ -380,7 +377,7 @@
                 <div class="plan">
                     <div class="head">
                         <h3>Premium</h3>
-                        <span>19</span>
+                        <span>57</span>
                     </div>
                     <ul>
                         <li>Feature No 1.</li>
@@ -410,7 +407,7 @@
                 <div class="plan">
                     <div class="head">
                         <h3>Platinum</h3>
-                        <span>19</span>
+                        <span>29</span>
                     </div>
                     <ul>
                         <li>Feature No 1.</li>
